# Dev-Template

./: .gitignore  LICENSE  README.md
Design/: singleton-hungry.cpp
DesignPattern/: singleton-lazy.cpp
Interview-Desgin/: event_queue.cpp  lru_thread_safe.cpp
Pool-Memory/: mem_pool.cpp
Pool-Threads/: CMakeLists.txt  test_threadpool.cpp  threadpool.h
Qt5-Template/: CMakeLists.txt  CMakeLists_template.txt
SmartPointer-raw/: my_pointer.cpp  my_uni_pointer.cpp
config-settings/: README.md
config-settings/fish/: config.fish  fish_variables
config-settings/fish/functions/: nvm.fish
event_loop/: simple_event_loop.cpp
src/: main.cpp
vscode-settings/: settings_root.json
